--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="description" content="Ahsan Nishad Portfolio Website" />
+    <link SameSite=None rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/f4d7a5e04d.js" crossorigin="anonymous"></script>
+
 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
