--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,9 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/f4d7a5e04d.js" crossorigin="anonymous"></script>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
